k8s/apps/leachnet/ln-automotive/tronity/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
    traefik.ingress.kubernetes.io/router.middlewares: identity-system-ak-outpost-leachnet-proxy-outpost@kubernetescrd
  name: tronity-ingress
spec:
  rules:
  - host: tronity.net.theleachfamily.me.uk
    http: &http_rules
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tronity-sync
            port:
              name: http
  - host: sync.tronity.net.theleachfamily.me.uk
    http: *http_rules
  tls:
  - hosts:
    - tronity.theleachfamily.me.uk
    - sync.tronity.theleachfamily.me.uk
    secretName: tronity-cert
